Fix bag and add Dockerfile
