# openapi/restapi/operations/server/result_parameters.go
@@ -36,7 +36,7 @@ type ResultParams struct {
 	/*
 	  In: body
 	*/
-	Body *models.RResult
+	Body *models.Result
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
@@ -50,7 +50,7 @@ func (o *ResultParams) BindRequest(r *http.Request, route *middleware.MatchedRou
 
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
-		var body models.RResult
+		var body models.Result
 		if err := route.Consumer.Consume(r.Body, &body); err != nil {
 			res = append(res, errors.NewParseError("body", "body", "", err))
 		} else {
